--- a/Jenkins_Project/pom.xml
+++ b/Jenkins_Project/pom.xml
@@ -29,6 +29,17 @@
     <version>4.1.2</version>
 
 </dependency>
+<dependency>
+
+    <groupId>org.projectlombok</groupId>
+
+    <artifactId>lombok</artifactId>
+    
+
+    <version>1.18.30</version>
+    <scope>provided</scope>
+
+</dependency>
 
 <dependency>
 
